# geocr_mcp

./: .gitignore  Procfile  README.md  app.py  pyproject.toml  requirements.txt
config/: catalogs.yaml
src/: cli.py  config.py  server.py
src/templates/: geocr.ttl  geocr_skeleton.json
src/tools/: dataset_search.py  geocr_generator.py  stac_search.py  validation.py
