[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geocr-mcp"
version = "0.1.0"
description = "GeoCR MCP Server - Geospatial ML Dataset Assistant"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "pystac-client",
    "pyyaml",
    "mlcroissant",
    "rasterio",
    "gradio>=5.12.0",
    "openai>=1.30.0",
]

[project.scripts]
geocr-mcp = "src.cli:main"

[tool.setuptools]
packages = ["src", "src.tools"]
